# e-commerce_AI_Agent

./: ECommerce_AI_Agent_Documentation.docx  ecommerce_ai_agent_docs.md
.github/workflows/: ci-cd.yml
ai_agent_core/: pyproject.toml
ai_agent_core/ai_agent_core/: SCHEMA_GUIDE.md  __init__.py  agent_core.py
ai_agent_core/ai_agent_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ai_agent_core/ai_agent_core/agent/: __init__.py  runner.py
ai_agent_core/ai_agent_core/config/: settings.py
ai_agent_core/ai_agent_core/llm/: __init__.py  llm_manager.py
ai_agent_core/ai_agent_core/prompts/: __init__.py  prompt_builder.py
ai_agent_core/ai_agent_core/schema/: __init__.py  response_schema.py
ai_agent_core/ai_agent_core/tools/: __init__.py  base_tool.py  tool_executor.py  tool_registry.py
ai_agent_core/ai_agent_core/utils/: logger.py
backend/: .gitignore  config.py  pytest.ini  requirements.txt  requirements1.txt  seed_data.py  tmp_probe.py
backend/app/: db.py  main.py  models.py  schemas.py
backend/app/agents/: page_context.py  service.py  tools.py
backend/app/agents copy/: page_context.py  service.py  tools.py
backend/app/ai/: context_agent.py  context_schemas.py  schemas.py  unified_agent.py  unified_schemas.py
backend/app/routes/: address.py  cart.py  chat.py  context.py  order.py  product.py  review.py  unified.py  user.py
backend/test/: api_test_runner.py  conftest.py  sample_cases.py  test_api.py  test_cases.py
frontend/: index.html  package-lock.json  vite.config.js
frontend/src/: App.jsx  index.css
(+48 files in other folders)
